# brick

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  WORKSPACE  build.sh  dev.Dockerfile  docker_connect.sh  docker_create.sh  dummy.cpp  example.cpp  parse_test.cpp
brick/request/: BUILD  request.cc  request.hpp
brick/response/: BUILD  response.hpp
brick/server/: BUILD  server.cc  server.hpp
brick/utils/logging/: BUILD
examples/hello_world/: BUILD  hello_world.cpp
includes/: handler.cc  handler.hpp  request.cc  request.hpp  response.cc  response.hpp  server.cc  server.hpp
utils/: logger.cc  logger.hpp  logger_old.hpp
